[tool.poetry]
name = "api"
version = "0.1.0"
description = "Maven Monolith API"
authors = ["Maven Engineering <engineering@mavenclinic.com>"]
packages = [{include = "../api"}]

[tool.poetry.scripts]
db = "api_console:db"
dev = "api_console:dev"
mmono = "mmono:main"

[tool.poetry.dependencies]
# - * - Web API Dependencies - * - #
python = "^3.9"
Flask = "^2.3.3"
Flask-Admin = "^1.6.1"
Flask-Login = "^0.6.3"
Flask-PageDown = "^0.4.0"
Flask-Principal = "^0.4.0"
Flask-RESTful = "^0.3.10"
httpproblem = "^0.2.0"
simplejson = "^3.16.0"
auth0-python = "^4.3.0"
pyopenssl = "^24"
email-validator = "^2.0.0.post2"
wtforms = "3.0.0"
certifi = "2023.7.22"
overpunch = "^1.1"
fixedwidth = "^1.3"
tenacity = "^8.2.3"
python-gnupg = "^0.5.1"
urllib3 = "1.26.18"
flask-failsafe = "0.2"
werkzeug = "^3.0.1"
jinja2 = "^3.1.3"
babel = "^2.14.0"
pygtrie = "^2.5.0"
kubernetes = "^28.1.0"
aiohttp = "^3.9.5"
flask-babel = "^4.0.0"
pytest-cov = "^5.0.0"
jsonschema="^4.23.0"

[tool.poetry.group.airflow.dependencies]
pendulum = "^3.0.0"
croniter = "^2.0.0"

[tool.poetry.group.server.dependencies]
# - * - Deployment Server Dependencies - * - #
gunicorn = "^20.1.0"
waitress = "^3.0.0"

[tool.poetry.group.database.dependencies]
# - * - Database Dependencies - * - #
alembic = "^1.11.3"
# further upgrade requires flask 2.2
Flask-SQLAlchemy = "^2.5.1"
# TODO: migrate to mysqlclient. Should be a drop-in, but will require a Terraform apply.
#   mysqlclient is a stable, dbapi-compliant wrapper around MySQL's C connector.
pymysql = "^1.1.0"
# Numerous breaking changes.
sqlalchemy = "<1.4"

[tool.poetry.group.services.dependencies]
# - * - Services Dependencies - * - #
protobuf = "^3.20"
grpclib = "^0.4.1"
oauth2client = "^4.1.3"
otpauth = "^1.0.1"
python3-saml = "^1.9.0"
qrcode = { version = "^6.1", extras = ["pil"] }
redis = "^4.5.5"
redset = "^0.5.1"
rq = "1.15.1"
rq-dashboard = "^0.6.7"
pyjwt = "^2.0.0"

[tool.poetry.group.integrations.dependencies]
# - * - Integrations Dependencies - * - #
authy = "^2.2.6"
apns-clerk = "^0.2.0"
contentful = "^2.3.2"
elastic-enterprise-search = "^7.10.0b1"
mailchimp = "^2.0.9"
opentok = "^3.1.0"
stripe = "^1.79.1"
twilio = "^7.14.2"
zenpy = "^2.0.22"

[tool.poetry.group.instrumentation.dependencies]
# - * - Instrumentation Dependencies - * - #
maven-sdk-observability-python = {version = "*", source = "pypi-mvn"}

[tool.poetry.group.utilities.dependencies]
# - * - General Utililities - * - #
cached-property = "^1.5.1"
dateparser = "^1.2.0"
icalendar = "^4.0.1"
iso3166 = "^1.0"
json-merge-patch = "^0.2"
marshmallow = "^3.18.0"
marshmallow-v1 = {path = "wheelhouse/marshmallow_v1"}
misaka = "^2.1.1"
phonenumbers = "^8.9.10"
pycryptodome = "^3.20.0"
python-magic = "^0.4.15"
python-slugify = "^1.2.5"
snowflake = {path = "wheelhouse/snowflake-1.0.0-py3-none-any.whl"}
zxcvbn = "4.4.28"
chardet = "^4.0.0"
pycountry = "^20.7.3"
paramiko = "^3.4.0"
inflection = "^0.5.1"
luhn = "^0.2.0"
pyyaml = "^6.0.1"
typing-extensions = "^4.5.0"
maven-sdk-feature-flags-python = {version = "^1", source = "pypi-mvn"}
maven-sdk-data-access-python = {version = "^0.10", source = "pypi-mvn"}

[tool.poetry.group.opencensus.dependencies]
opencensus-ext-google-cloud-clientlibs = "^0.1.2"
opencensus-ext-sqlalchemy = "^0.1.2"
opencensus-ext-stackdriver = "^0.7.2"

[tool.poetry.group.google.dependencies]
google-cloud-bigquery = "^3.25.0"
google-cloud-kms = "^2.2.0"
google-cloud-pubsub = "^2.0.0"
google-cloud-storage = "^1.20.0"
google-api-python-client = "^2.17.0"
google-cloud-error-reporting = "^1.0.0"
google-cloud-recaptcha-enterprise = "^1.4.1"

# These dependencies are used by the dev shell
[tool.poetry.group.shell.dependencies]
ipython = "^8.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^5.0.0"
pytest-split = "^0.8"
coverage = "^7"
unittest-xml-reporting = "^3"
factory-boy = "^3"
freezegun = "^1"
junitparser = "^3.1.2"
flaky = "^3.8.1"
pytest-xdist = "^3.6.1"
time-machine = "^2.14.1"
pytest-testmon = "^2.1.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-gl-codeclimate = "^0.2.1"
safety = "^2.3.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3"
colorama = "^0.4.4"
ipdb = "^0.13.9"
jinja2-cli = "^0.7.0"
python-dotenv = "^0.20.0"
black = "^22.8.0"
flask-debugtoolbar = "^0.13.1"
maven-sdk-benchmarking-python = {version = "1.1.2", source = "pypi-mvn"}
isort = "5.13.2"

[tool.poetry.group.temporary.dependencies]
# These three are specific to the webflow -> contentful migration and are
# intended to be temporary
beautifulsoup4 = "^4.11.1"
markdownify = "^0.11.6"
contentful_management = "^2.13.0"

[[tool.poetry.source]]
name = "pypi-mvn"
url = "https://us-east1-python.pkg.dev/maven-clinic-image-builder/pypi-mvn/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88
target_version = ["py38"]
extend-exclude = '''
/.*(maven_schemas|schemas/io/snapshot\.py|wheelhouse).*
'''
